--- a/front/index.html
+++ b/front/index.html
@@ -3,10 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" >
     <title>Document</title>
   </head>
   <body>
-    <h1>Proyecto de M2</h1>
+    <header id="header"> 
+      <div class="div-header"> 
+        <ul>
+          <li><a href="#">Inicio </a></li>
+          <li><a href="#">Peliculas </a></li>
+          <li><a href="#">Series </a></li>
+          <li><a href="#">Novedades</a></li>
+        </ul>
+      </div>
+    </header>
+    <main> 
+    <section class='FlexContainer'>
+      
+     
+    </section>
+  </main>
+
+
 
     <script src="./scripts/tempData.js"></script>
     <script src="./scripts/index.js"></script>
