--- a/front/series.html
+++ b/front/series.html
@@ -10,16 +10,24 @@
     <title>Series</title>
 </head>
 <body>
-    <header id="header"> 
-        <div class="div-header"> 
-          <ul>
-            <li><a href="index.html">Inicio </a></li>
-            <li><a href="peliculas.html">Peliculas </a></li>
-            <li><a href="series.html">Series </a></li>
-            <li><a href="novedades.html">Novedades</a></li>
-          </ul>
-        </div>
+    <header> 
+      <div class="container-fluid navbar ">
+            
+        <li ><a class="nav-link "  href="index.html">Inicio </a></li>
+        <li ><a class="nav-link" href="peliculas.html">Peliculas </a></li>
+        <li ><a class="nav-link" href="series.html">Series </a></li>
+        <li ><a class="nav-link" href="novedades.html">Novedades</a></li>
+      
+      <div class=""> 
+        <form class="d-flex" role="search">
+          <input class="form-control " type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
       </header>
-    <h1>SERIES</h1>
+      <div class="cheflix">
+        <h1 class="texto-cheflix"> CHE-FLIX</h1>
+      </div>
 </body>
 </html>
